# schoolcrm

backend/: .env  Cargo.toml
backend/src/: db.rs  main.rs
backend/src/models/: marks.rs  mod.rs  student.rs  test.rs
backend/src/routes/: auth.rs  marks.rs  mod.rs  students.rs  tests.rs
frontend/src/pages/student/: Dashboard.js
