[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "bigdecimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4.10", features = ["serde"] }
